--- a/pom.xml
+++ b/pom.xml
@@ -88,9 +88,17 @@
           <version>3.8.0</version>
         </plugin>
         <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<includes>
+						<include>br/com/iCarrositau/appium/runner/RunnerConsultaAppiCarros.java</include>
+					</includes>
+					<parallel>all</parallel>
+					<threadCount>1</threadCount>
+				</configuration>
+			</plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
@@ -115,4 +123,6 @@
       </plugins>
     </pluginManagement>
   </build>
+  
+  
 </project>
