Correção para executar como JUnit Project

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
   <name>appiummobile</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
 
 <dependencies>
 		<dependency>
@@ -22,6 +26,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			
 		</dependency>
 	    <dependency>
 			<groupId>io.appium</groupId>
@@ -56,20 +61,6 @@
 		</dependency>
 	</dependencies>
 	
-	<build>
-	<plugins>
-	
-	<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
-        </configuration>
-    </plugin>
-    
-    </plugins>
-	
-	</build>
+
 	
 </project>
